secondary html pages added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="z-depth-1 center-align" id="loginPage">
             <h1>Want to get away?</h1>
             <a href="#" class="btn blue waves-effect waves light" id="loginButton">Find your paradise</a>
+            <br>
         </div>
         <div id="homePage">
             <nav class="nav-wrapper blue">
@@ -35,17 +36,17 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#" class="homeLink">Home</a></li>
-                        <li><a href="#" class="myTripsLink">My Trips</a></li>
-                        <li><a href="#" class="myProfileLink">My Profile</a></li>
-                        <li><a href="#" class="aboutUsLink">About Us</a></li>
+                        <li><a href="./mytrips.html" class="myTripsLink">My Trips</a></li>
+                        <li><a href="./myprofile.html" class="myProfileLink">My Profile</a></li>
+                        <li><a href="./aboutus.html" class="aboutUsLink">About Us</a></li>
                     </ul>
                 </div>
             </nav>
             <ul class="sidenav" id="mobile-links">
                 <li><a href="#" class="homeLink">Home</a></li>
-                <li><a href="#" class="myTripsLink">My Trips</a></li>
-                <li><a href="#" class="myProfileLink">My Profile</a></li>
-                <li><a href="#" class="aboutUsLink">About Us</a></li>
+                <li><a href="./mytrips.html" class="myTripsLink">My Trips</a></li>
+                <li><a href="./myprofile.html" class="myProfileLink">My Profile</a></li>
+                <li><a href="./aboutus.html" class="aboutUsLink">About Us</a></li>
             </ul>
         </div>
     </div>
