html added to external pages

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <img src="./assets/images/great-wall.jpg" alt="" class="responsive-img">
             </div>
         </div>
-        <footer class="footer-copyright grey darken-3">
+        <footer id="footer" class="footer-copyright grey darken-3">
             <div class="container center align">&copy: 2019 UCD Bootcamp</div>
         </footer>
     </div>
