--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <footer class="footer-copyright grey darken-3">
-            <div class="container center align">&copy: 2019 UCD Bootcamp</div>
+            <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
     <script type="text/javascript" src="./assets/javascript/logic.js"></script>
