--- a/myprofile.html
+++ b/myprofile.html
@@ -64,13 +64,12 @@
             </div>
         </div>
         <footer class="footer-copyright grey darken-3">
-            <div class="container center align">&copy: 2019 UCD Bootcamp</div>
+            <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
     <script type="text/javascript" src="./assets/javascript/externalpage.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    </script>
 </body>
 
 </html>
