external pages formatted and new images

--- a/myprofile.html
+++ b/myprofile.html
@@ -47,7 +47,7 @@
             </div>
             <div class="parallax-container">
                 <div class="parallax">
-                    <img src="./assets/images/chair-lift.jpg" alt="" class="responsive-img">
+                    <img src="./assets/images/Paris.jpeg" alt="" class="responsive-img">
                 </div>
             </div>
             <div>
@@ -60,14 +60,14 @@
         </div>
         <div class="parallax-container">
             <div class="parallax">
-                <img src="./assets/images/beach.jpg" alt="" class="responsive-img">
+                <img src="./assets/images/Fiji.jpg" alt="" class="responsive-img">
             </div>
         </div>
         <footer class="footer-copyright grey darken-3">
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
-    <script type="text/javascript" src="./assets/javascript/externalpage.js"></script>
+    <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
