--- a/mytrips.html
+++ b/mytrips.html
@@ -47,27 +47,27 @@
             </div>
             <div class="parallax-container">
                 <div class="parallax">
-                    <img src="./assets/images/chair-lift.jpg" alt="" class="responsive-img">
+                    <img src="./assets/images/Venice.jpg" alt="" class="responsive-img">
                 </div>
             </div>
             <div>
                 <div class="row">
                     <div class="col s12 l6">
-                        <h1>Your Trips</h1>
+                        <h1 id="yourTrips">Your Trips</h1>
                     </div>
                 </div>
             </div>
         </div>
         <div class="parallax-container">
             <div class="parallax">
-                <img src="./assets/images/beach.jpg" alt="" class="responsive-img">
+                <img src="./assets/images/Tokyo.jpg" alt="" class="responsive-img">
             </div>
         </div>
         <footer class="footer-copyright grey darken-3">
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
-    <script type="text/javascript" src="./assets/javascript/externalpage.js"></script>
+    <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
