--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </div>
             <div>
                 <div class="row">
-                    <div class="col s12 l6">
-                        <h1>Select your adventure</h1>
+                    <div class="col s12 l6 offset-m3 offset-l3">
+                        <h1 class="center">Select your adventure</h1>
                         <div class="input-field">
                             <div>
                                 <input type="text" id="destination">
@@ -85,7 +85,8 @@
                                 <label for="numberOfChildren">Number of Children</label>
                             </div>
                         </div>
-                        Hotel rating?:<br>
+                        <!--
+                            Hotel rating?:<br>
                         <select name="hotelList">
                             <option value="0">Any</option>
                             <option value="1">2 star or higher</option>
@@ -102,7 +103,7 @@
                             <option value="compact">Compact Car</option>
                             <option value="suv">SUV</option>
                             <option value="luxury">Luxury</option>
-                        </select>
+                        </select>   -->
                         <br>
                         <a href="#" class="btn-large blue waves-effect waves light" id="searchButton">Search</a>
                     </div>
@@ -115,9 +116,9 @@
             </div>
         </div>
         <div class="row searchHide" id="searchResultBox">
-            <div class="col s12 l6">
+            <div class="col s12 l6 offset-m3 offset-l3">
                 <div>
-                    <h1>Results</h1>
+                    <h1 class="center">Results</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto officiis ullam nostrum
                         doloremque
                         a non expedita, eum exercitationem obcaecati praesentium, pariatur labore minima numquam nihil
