--- a/myprofile.html
+++ b/myprofile.html
@@ -52,8 +52,8 @@
             </div>
             <div>
                 <div class="row">
-                    <div class="col s12 l6">
-                        <h1>Your Profile</h1>
+                    <div class="col s12 l6 offset-m3 offset-l3">
+                        <h1 class="center">Your Profile</h1>
                     </div>
                 </div>
             </div>
