--- a/mytrips.html
+++ b/mytrips.html
@@ -52,8 +52,8 @@
             </div>
             <div>
                 <div class="row">
-                    <div class="col s12 l6">
-                        <h1 id="yourTrips">Your Trips</h1>
+                    <div class="col s12 l6 offset-m3 offset-l3">
+                        <h1 class="center" id=" yourTrips">Your Trips</h1>
                     </div>
                 </div>
             </div>
