--- a/myprofile.html
+++ b/myprofile.html
@@ -14,7 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Dancing+Script|Lobster&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
     <title>Group Project</title>
@@ -23,13 +24,15 @@
 <body>
     <div>
         <div id="aboutPage">
+
+            <!--Navbar-->
             <nav class="nav-wrapper blue">
                 <div class="container">
                     <a href="#" class="brand-logo">Site Name</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
                         <i class="material-icons">menu</i>
                     </a>
-                    <ul class="right hide-on-med-and-down">
+                    <ul id="navbar-links" class="right hide-on-med-and-down">
                         <li><a href="./index.html" class="homeLink">Home</a></li>
                         <li><a href="./mytrips.html" class="myTripsLink">My Trips</a></li>
                         <li><a href="#" class="myProfileLink">My Profile</a></li>
@@ -37,6 +40,8 @@
                     </ul>
                 </div>
             </nav>
+
+            <!--Navbar Phone Menu-->
             <div>
                 <ul class="sidenav" id="mobile-links">
                     <li><a href="./index.html" class="homeLink">Home</a></li>
@@ -45,11 +50,15 @@
                     <li><a href="./aboutus.html" class="aboutUsLink">About Us</a></li>
                 </ul>
             </div>
+
+            <!--Parallax image 1-->
             <div class="parallax-container">
                 <div class="parallax">
                     <img src="./assets/images/Paris.jpeg" alt="" class="responsive-img">
                 </div>
             </div>
+
+            <!--Your profile div-->
             <div>
                 <div class="row">
                     <div class="col s12 l6 offset-m3 offset-l3">
@@ -58,12 +67,16 @@
                 </div>
             </div>
         </div>
+
+        <!--Parallax image 2-->
         <div class="parallax-container">
             <div class="parallax">
                 <img src="./assets/images/Fiji.jpg" alt="" class="responsive-img">
             </div>
         </div>
-        <footer class="footer-copyright grey darken-3">
+
+        <!--Footer-->
+        <footer class="footer-copyright blue">
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
