external page tables added

--- a/aboutus.html
+++ b/aboutus.html
@@ -63,6 +63,22 @@
                 <div class="row">
                     <div class="col s12 l6 offset-m3 offset-l3">
                         <h1 id="h1" class="center">About Us</h1>
+                        <div id="aboutusText">
+                            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                                natus
+                                laboriosam dolore error
+                                placeat, consectetur iure, impedit atque in at earum saepe enim, quibusdam magnam quod
+                                eveniet. Laborum, dicta error.</p>
+                            <br>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+                                veniam voluptatibus officiis ipsam blanditiis animi enim ullam nesciunt unde
+                                consequuntur commodi eligendi perferendis maxime cumque fugit ducimus aspernatur,
+                                distinctio iure.</p>
+                            <br>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque
+                                consequuntur incidunt expedita doloribus eveniet vitae ea vero necessitatibus eaque
+                                laboriosam vel, assumenda debitis magni minus tempore consectetur odio nam itaque?</p>
+                        </div>
                     </div>
                 </div>
             </div>
