--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             <!--Parallax image 1-->
             <div class="parallax-container">
                 <div class="parallax">
-                    <h1>Welcome</h1>
                     <img src="./assets/images/chair-lift.jpg" alt="" class="responsive-img">
                 </div>
             </div>
@@ -100,7 +99,7 @@
                         <br>
 
                         <!--   USER INPUT SEARCH BUTTON   -->
-                        <a href="#" class="btn-large blue waves-effect waves light" class="center"
+                        <a href="#" class="btn-large blue waves-effect waves light hoverable" class="center"
                             id="searchButton">Search</a>
                     </div>
                 </div>
