--- a/myprofile.html
+++ b/myprofile.html
@@ -63,6 +63,11 @@
                 <div class="row">
                     <div class="col s12 l6 offset-m3 offset-l3">
                         <h1 class="center">Your Profile</h1>
+                        <div class="center" id="userProfile">
+                            <p>username =</p>
+                            <p>email=</p>
+                            <p>signout</p>
+                        </div>
                     </div>
                 </div>
             </div>
