--- a/mytrips.html
+++ b/mytrips.html
@@ -57,26 +57,44 @@
                     <img src="./assets/images/Venice.jpg" alt="" class="responsive-img">
                 </div>
             </div>
-            <div>
-
-                <!--Your Trip Div-->
-                <div class="row">
-                    <div class="col s12 l6 offset-m3 offset-l3">
-                        <h1 class="center" id=" yourTrips">Your Trips</h1>
-                    </div>
+            <!--Your Trip Div-->
+            <div class="row">
+                <div class="col s12 l6 offset-m3 offset-l3">
+                    <h1 class="center" id=" yourTrips">Your Trips</h1>
                 </div>
             </div>
-        </div>
-        <!--Parallax image 2-->
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="./assets/images/Tokyo.jpg" alt="" class="responsive-img">
+            <div class="row">
+                <div class="col s12 l6 offset-m3 offset-l3" id="mytripsTable">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th class="center">Destination</th>
+                                <th class="center">Trip Date</th>
+                                <th class="center">Trip Price</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td class="center">Ur moms</td>
+                                <td class="center">4/20/1969</td>
+                                <td class="center">$1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
+            <!--Parallax image 2-->
+            <div class="parallax-container">
+                <div class="parallax">
+                    <img src="./assets/images/Tokyo.jpg" alt="" class="responsive-img">
+                </div>
+            </div>
+            <!--Footer-->
+            <footer class="footer-copyright blue">
+                <div class="container center align">&copy; 2019 UCD Bootcamp</div>
+            </footer>
         </div>
-        <!--Footer-->
-        <footer class="footer-copyright blue">
-            <div class="container center align">&copy; 2019 UCD Bootcamp</div>
-        </footer>
     </div>
     <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
