--- a/mytrips.html
+++ b/mytrips.html
@@ -54,6 +54,7 @@
                 <div class="row">
                     <div class="col s12 l6">
                         <h1>Your Trips</h1>
+                        <p id="trip"></p>
                     </div>
                 </div>
             </div>
@@ -67,7 +68,7 @@
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
-    <script type="text/javascript" src="./assets/javascript/externalpage.js"></script>
+    <script type="text/javascript" src="./assets/javascript/logic.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
