--- a/myprofile.html
+++ b/myprofile.html
@@ -66,7 +66,8 @@
                         <div class="center" id="userProfile">
                             <p>username =</p>
                             <p>email=</p>
-                            <p>signout</p>
+                            <td class="center"><a href="#" class="btn waves-effect waves light hoverable" class="center"
+                                    id="signOutButton">Sign out</a></td>
                         </div>
                     </div>
                 </div>
