--- a/mytrips.html
+++ b/mytrips.html
@@ -67,10 +67,11 @@
                 <div class="col s12 l6 offset-m3 offset-l3" id="mytripsTable">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="center">Destination</th>
-                                <th class="center">Trip Date</th>
-                                <th class="center">Trip Price</th>
+                            <tr id="tripTableTop">
+                                <th class="center teal-text lighten-1">Destination</th>
+                                <th class="center teal-text lighten-1">Trip Date</th>
+                                <th class="center teal-text lighten-1">Trip Price</th>
+                                <th class="center teal-text lighten-1">See Trip Details</th>
                             </tr>
                         </thead>
 
@@ -79,6 +80,15 @@
                                 <td class="center">Ur moms</td>
                                 <td class="center">4/20/1969</td>
                                 <td class="center">$1</td>
+                                <td class="center"><a href="#" class="btn waves-effect waves light hoverable"
+                                        class="center" id="tripOpenButton">Open</a></td>
+                            </tr>
+                            <tr>
+                                <td class="center">Just Kidding</td>
+                                <td class="center">Always</td>
+                                <td class="center">$0.02</td>
+                                <td class="center"><a href="#" class="btn waves-effect waves light hoverable"
+                                        class="center" id="tripOpenButton">Open</a></td>
                             </tr>
                         </tbody>
                     </table>
