materialize css changes:

--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
                             </div>
                         </div>
                         <br>
-
-                        <!--   USER INPUT SEARCH BUTTON   -->
-                        <a href="#" class="btn-large blue waves-effect waves light hoverable" class="center"
-                            id="searchButton">Search</a>
+                        <div class="center">
+                            <!--   USER INPUT SEARCH BUTTON   -->
+                            <a href="#" class="btn-large blue waves-effect waves light hoverable" class="center"
+                                id="searchButton">Search</a>
+                        </div>
                     </div>
                 </div>
             </div>
