--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <!--   USER INPUT RESULTS   -->
         <div class="row searchHide" id="searchResultBox">
             <div class="col s12 l8 offset-m2 offset-l2">
-                <h2 class="center">Hotels</h2>
-                <div id="hotelCardDiv">
+                <h2 class="center">Food</h2>
+                <div id="foodCardDiv">
                     <!--Cards-->
                 </div>
                 <hr>
